more config to support new users

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -163,7 +163,7 @@ maximumDepthInMeters = true
 
 
 #project-related variables
-application.version=shepherd-2.0.0-RELEASE
+application.version=shepherd-2.0.1-EXPERIMENTAL
 
 #genetic parameters
 numLoci = 14
@@ -190,3 +190,20 @@ releaseDateFormat=dd/MM/yyyy
 encounterState0=unapproved
 encounterState1=approved
 encounterState2=unidentifiable
+
+#predefined locationID attributes to limit the library to
+locationID0 = Mozambique
+locationID1 = SouthAfrica
+locationID2 = AustraliaEast
+locationID3 = AustraliaWest
+locationID4 = Brazil
+locationID5 = Ecuador
+locationID6 = Thailand
+locationID7 = Myanmar
+locationID8 = Indonesia
+locationID9 = Palau
+locationID10 = Japan
+locationID11 = MexicoRevillagigedos
+locationID12 = Hawaii
+locationID13 = Maldives
+locationID14 = Peru
