--- a/src/main/resources/bundles/submitActionClass.properties
+++ b/src/main/resources/bundles/submitActionClass.properties
@@ -17,3 +17,16 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
+mozambique = Mozambique
+brazil = Brazil
+ecuador = Ecuador
+galapagos = Ecuador
+thailand = Thailand
+myanmar = Myanmar
+indonesia = Indonesia
+palau = Palau
+japan = Japan
+revillagigedos = MexicoRevillagigedos
+hawaii = Hawaii
+maldives = Maldives
+peru = Peru
