--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -199,3 +199,8 @@ releaseDateFormat=dd/MM/yyyy
 encounterState0=unapproved
 encounterState1=approved
 encounterState2=unidentifiable
+
+#limit Encounter.locationID to these values
+#locationID0 = location0
+#locationID1 = location 1
+
