adding correct email addresses for regions

--- a/src/main/resources/bundles/confirmSubmitEmails.properties
+++ b/src/main/resources/bundles/confirmSubmitEmails.properties
@@ -19,3 +19,15 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
+Mozambique = andrea@marinemegafauna.org
+Brazil = gkodja@lajeviva.org.br
+Ecuador = andrea@marinemegafauna.org
+Thailand = andrea@marinemegafauna.org
+Myanmar = andrea@marinemegafauna.org
+Indonesia = peterb.mail@gmail.com
+Palau = etpison@palaunet.com
+Japan = tomkashiwagi@uq.edu.au
+MexicoRevillagigedos = manta.birostris1@gmail.com
+Hawaii = deakos@hawaii.edu
+Maldives = mantarayproject@hotmail.com
+Peru = writepic@gmail.com
