-allow behavior to be set in commonCOnfiguration.properties -allow locationID to be set to null -allow behavior to be set to null

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -141,6 +141,14 @@ showTaxonomy = false
 #genusSpecies1=genus specificEpithet
 #genusSpecies2=genus specificEpithet
 
+#show behavior
+showBehavior = true
+
+#defined behaviors
+#behavior0 = define a behavior
+#behavior1 = define a behavior
+#behavior2 = define a behavior
+
 #show lifeStage
 showLifestage = true
 
