--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>jetty-runner</artifactId>
+      <version>8.1.0.RC2</version>
+    </dependency>
+    <dependency>
       <groupId>net.sourceforge.jwebunit</groupId>
       <artifactId>jwebunit-htmlunit-plugin</artifactId>
       <version>2.5</version>
@@ -245,12 +250,22 @@
   
     <plugins>
     
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <version>2.2.2</version>
+    <configuration>
+      <descriptors>
+        <descriptor>src/main/assembly/runnable.xml</descriptor>
+      </descriptors>
+    </configuration>
+  </plugin>
  <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-javadoc-plugin</artifactId>
    <version>2.8</version>
 <configuration>
-	        <reportOutputDirectory>${project.basedir}/target/${pom.artifactId}-${pom.version}</reportOutputDirectory>
+	        <reportOutputDirectory>${project.basedir}/target/${project.artifactId}-${project.version}</reportOutputDirectory>
 	        <destDir>javadoc</destDir>
 	        <show>private</show>
 	    </configuration>
@@ -269,17 +284,17 @@
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>maven-jetty-plugin</artifactId>
-        <version>6.1.25</version>
+        <version>8.1.0.RC2</version>
         <configuration>
           <!--jettyConfig>src/test/resources/jetty/jetty.xml</jettyConfig-->
-          <userRealms>
-            <userRealm implementation="org.mortbay.jetty.security.HashUserRealm">
-              <name>Shepherd Realm</name>
-              <config>src/test/resources/jetty/shepherd.properties</config>
-            </userRealm>
-          </userRealms>
+          <loginServices>
+            <loginService implementation="org.eclipse.jetty.security.HashLoginService">
+              <name>Test Realm</name>
+              <config>${basedir}/src/test/resources/jetty/shepherd.properties</config>
+            </loginService>
+          </loginServices>          
           <connectors>
-            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+            <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
               <port>8080</port>
               <maxIdleTime>60000</maxIdleTime>
             </connector>
@@ -296,7 +311,7 @@
             </goals>
             <configuration>
               <connectors>
-                <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+                <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
                   <port>9090</port>
                   <maxIdleTime>60000</maxIdleTime>
                 </connector>
@@ -329,6 +344,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
         <configuration>
           <source>1.5</source>
           <target>1.5</target>
@@ -360,15 +376,6 @@
           </execution>
         </executions>
       </plugin>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                <source>1.5</source>
-                <target>1.5</target>
-              </configuration>
-            </plugin>
-           
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.6</version>
