--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1066,27 +1066,12 @@
     <auth-constraint>
       <!-- Anyone with one of the listed roles may access this area -->
       <role-name>admin</role-name>
-
+	<role-name>researcher</role-name>
+	<role-name>manager</role-name>
     </auth-constraint>
   </security-constraint>
 
 
-  <security-constraint>
-    <display-name>Manager Security Constraint</display-name>
-    <web-resource-collection>
-      <web-resource-name>Protected Area</web-resource-name>
-      <!-- Define the context-relative URL(s) to be protected -->
-
-
-      <url-pattern>/encounters/searchExport</url-pattern>
-
-    </web-resource-collection>
-    <auth-constraint>
-      <!-- Anyone with one of the listed roles may access this area -->
-      <role-name>admin</role-name>
-
-    </auth-constraint>
-  </security-constraint>
 
 
   <security-constraint>
@@ -1096,50 +1081,9 @@
       <!-- Define the context-relative URL(s) to be protected -->
 
       <url-pattern>/appadmin/scanTaskAdmin.jsp</url-pattern>
-      <url-pattern>/encounters/encounterSpotVisualizer.jsp</url-pattern>
-      <url-pattern>/IndividualSetAlternateID</url-pattern>
-      <url-pattern>/EncounterSetAlternateID</url-pattern>
-      <url-pattern>/EncounterSetState</url-pattern>
-      <url-pattern>/EncounterSetScarring</url-pattern>
-       <url-pattern>/EncounterSetVerbatimEventDate</url-pattern>
-       <url-pattern>/EncounterSetLifeStage</url-pattern>
-        <url-pattern>/EncounterSetTissueSample</url-pattern>
-        <url-pattern>/TissueSampleSetHaplotype</url-pattern>
-        <url-pattern>/TissueSampleRemoveHaplotype</url-pattern>
-        
-                <url-pattern>/TissueSampleSetSexAnalysis</url-pattern>
-        <url-pattern>/TissueSampleRemoveSexAnalysis</url-pattern>
-        
-         <url-pattern>/EncounterRemoveTissueSample</url-pattern>
-         <url-pattern>/EncounterRemoveImage</url-pattern>
-         <url-pattern>/SinglePhotoVideoRemoveKeyword</url-pattern>
-         <url-pattern>/SinglePhotoVideoAddKeyword</url-pattern>
-         <url-pattern>/EncounterSearchExportGeneGISFormat</url-pattern>
-         <url-pattern>/EncounterSearchExportKML</url-pattern>
-         <url-pattern>/EncounterSearchExportExcelFile</url-pattern>
-         <url-pattern>/EncounterSearchExportShapefile</url-pattern>
-         <url-pattern>/EncounterSearchExportEmailAddresses</url-pattern>
-      <url-pattern>/CJS</url-pattern>
-      <url-pattern>/software.jsp</url-pattern>
-      <url-pattern>/interconnect/mac/Interconnect.jar</url-pattern>
-      <url-pattern>/xcalendar/*</url-pattern>
-
-      <url-pattern>/interconnectSubmitSpots</url-pattern>
-
       <url-pattern>/appadmin/kwSearch.jsp</url-pattern>
       <url-pattern>/appadmin/kwResults.jsp</url-pattern>
-      <url-pattern>/individualSearch.jsp</url-pattern>
-      <url-pattern>/individualSearchResults.jsp</url-pattern>
-      <url-pattern>/individualThumbnailSearchResults.jsp</url-pattern>
-      <url-pattern>/encounters/thumbnailSearch.jsp</url-pattern>
-      <url-pattern>/encounters/thumbnailSearchResults.jsp</url-pattern>
-      <url-pattern>/encounters/encounterSearch.jsp</url-pattern>
-      <url-pattern>/encounters/searchResults.jsp</url-pattern>
-      <url-pattern>/googleSearch.jsp</url-pattern>
-      <url-pattern>/googleSearchResults.jsp</url-pattern>
-      <url-pattern>/encounters/imageViewer.jsp</url-pattern>
-      <url-pattern>/encounters/allEncountersUnapproved.jsp</url-pattern>
-      <url-pattern>/appadmin/*</url-pattern>
+<url-pattern>/appadmin/*</url-pattern>
       <url-pattern>/logs/*</url-pattern>
 
     </web-resource-collection>
@@ -1147,6 +1091,59 @@
       <!-- Anyone with one of the listed roles may access this area -->
       <role-name>admin</role-name>
     </auth-constraint>
+  </security-constraint>
+  
+    <security-constraint>
+      <display-name>Researcher Security Constraint</display-name>
+      <web-resource-collection>
+        <web-resource-name>Protected Area</web-resource-name>
+        <!-- Define the context-relative URL(s) to be protected -->
+  
+       <url-pattern>/encounters/encounterSpotVisualizer.jsp</url-pattern>
+        <url-pattern>/IndividualSetAlternateID</url-pattern>
+        <url-pattern>/EncounterSetAlternateID</url-pattern>
+        <url-pattern>/EncounterSetState</url-pattern>
+        <url-pattern>/EncounterSetScarring</url-pattern>
+         <url-pattern>/EncounterSetVerbatimEventDate</url-pattern>
+         <url-pattern>/EncounterSetLifeStage</url-pattern>
+          <url-pattern>/EncounterSetTissueSample</url-pattern>
+          <url-pattern>/TissueSampleSetHaplotype</url-pattern>
+          <url-pattern>/TissueSampleRemoveHaplotype</url-pattern>
+          
+                  <url-pattern>/TissueSampleSetSexAnalysis</url-pattern>
+          <url-pattern>/TissueSampleRemoveSexAnalysis</url-pattern>
+          
+           <url-pattern>/EncounterRemoveTissueSample</url-pattern>
+           <url-pattern>/EncounterRemoveImage</url-pattern>
+           <url-pattern>/SinglePhotoVideoRemoveKeyword</url-pattern>
+           <url-pattern>/SinglePhotoVideoAddKeyword</url-pattern>
+           <url-pattern>/EncounterSearchExportGeneGISFormat</url-pattern>
+           <url-pattern>/EncounterSearchExportKML</url-pattern>
+           <url-pattern>/EncounterSearchExportExcelFile</url-pattern>
+           <url-pattern>/EncounterSearchExportShapefile</url-pattern>
+           <url-pattern>/EncounterSearchExportEmailAddresses</url-pattern>
+       <url-pattern>/software.jsp</url-pattern>
+        <url-pattern>/xcalendar/*</url-pattern>
+        <url-pattern>/individualSearch.jsp</url-pattern>
+        <url-pattern>/individualSearchResults.jsp</url-pattern>
+        <url-pattern>/individualThumbnailSearchResults.jsp</url-pattern>
+        <url-pattern>/encounters/thumbnailSearch.jsp</url-pattern>
+        <url-pattern>/encounters/thumbnailSearchResults.jsp</url-pattern>
+        <url-pattern>/encounters/encounterSearch.jsp</url-pattern>
+        <url-pattern>/encounters/searchResults.jsp</url-pattern>
+        <url-pattern>/googleSearch.jsp</url-pattern>
+        <url-pattern>/googleSearchResults.jsp</url-pattern>
+        <url-pattern>/encounters/imageViewer.jsp</url-pattern>
+        <url-pattern>/encounters/allEncountersUnapproved.jsp</url-pattern>
+        <url-pattern>/logs/*</url-pattern>
+  
+      </web-resource-collection>
+      <auth-constraint>
+        <!-- Anyone with one of the listed roles may access this area -->
+        <role-name>researcher</role-name>
+        <role-name>manager</role-name>
+        <role-name>admin</role-name>
+      </auth-constraint>
   </security-constraint>
 
 
