--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.ecocean</groupId>
   <artifactId>shepherd</artifactId>
-  <version>2.0.1-EXPERIMENTAL</version>
+  <version>2.1.0-EXPERIMENTAL</version>
   <packaging>war</packaging>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <datanucleus.version>3.0.4</datanucleus.version>
     <datanucleus.enhancer.version>3.0.1</datanucleus.enhancer.version>
     <datanucleus.spatial.version>3.0.1</datanucleus.spatial.version>
@@ -189,11 +190,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.mortbay.jetty</groupId>
-      <artifactId>jetty-runner</artifactId>
-      <version>8.1.0.RC2</version>
-    </dependency>
-    <dependency>
       <groupId>net.sourceforge.jwebunit</groupId>
       <artifactId>jwebunit-htmlunit-plugin</artifactId>
       <version>2.5</version>
@@ -242,22 +238,12 @@
   
     <plugins>
     
-  <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-assembly-plugin</artifactId>
-    <version>2.2.2</version>
-    <configuration>
-      <descriptors>
-        <descriptor>src/main/assembly/runnable.xml</descriptor>
-      </descriptors>
-    </configuration>
-  </plugin>
  <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-javadoc-plugin</artifactId>
    <version>2.8</version>
 <configuration>
-	        <reportOutputDirectory>${project.basedir}/target/${project.artifactId}-${project.version}</reportOutputDirectory>
+	        <reportOutputDirectory>${project.basedir}/target/${pom.artifactId}-${pom.version}</reportOutputDirectory>
 	        <destDir>javadoc</destDir>
 	        <show>private</show>
 	    </configuration>
@@ -276,17 +262,17 @@
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>maven-jetty-plugin</artifactId>
-        <version>8.1.0.RC2</version>
+        <version>6.1.25</version>
         <configuration>
           <!--jettyConfig>src/test/resources/jetty/jetty.xml</jettyConfig-->
-          <loginServices>
-            <loginService implementation="org.eclipse.jetty.security.HashLoginService">
-              <name>Test Realm</name>
-              <config>${basedir}/src/test/resources/jetty/shepherd.properties</config>
-            </loginService>
-          </loginServices>          
+          <userRealms>
+            <userRealm implementation="org.mortbay.jetty.security.HashUserRealm">
+              <name>Shepherd Realm</name>
+              <config>src/test/resources/jetty/shepherd.properties</config>
+            </userRealm>
+          </userRealms>
           <connectors>
-            <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
               <port>8080</port>
               <maxIdleTime>60000</maxIdleTime>
             </connector>
@@ -303,7 +289,7 @@
             </goals>
             <configuration>
               <connectors>
-                <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
                   <port>9090</port>
                   <maxIdleTime>60000</maxIdleTime>
                 </connector>
@@ -336,7 +322,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
         <configuration>
           <source>1.5</source>
           <target>1.5</target>
@@ -368,6 +353,15 @@
           </execution>
         </executions>
       </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                <source>1.5</source>
+                <target>1.5</target>
+              </configuration>
+            </plugin>
+           
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.6</version>
