using shepherd_data_dir for submission

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -18,8 +18,7 @@
 #
 
 #file system folder in which encounter data will be stored (e.g. photos)
-imageLocation=encounters
-applicationDataDirectory=/opt/tomcat6/webapps/shepherd_data_dir
+#imageLocation=encounters
 
 #file system folder in which marked individual data will be stored (e.g. data files)
 markedIndividualDirectoryLocation=individuals 
