--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -20,14 +20,19 @@
 #file system folder in which encounter data will be stored (e.g. photos)
 #imageLocation=encounters
 
+#name (NOT PATH!) of the directory in which to store project image data
+#if you set this value to myCustomDirName, then your web server must also be able to resolve /myCustomDirName on its root URL
+dataDirectoryName = shepherd_data_dir
+
 #file system folder in which marked individual data will be stored (e.g. data files)
-markedIndividualDirectoryLocation=individuals 
+#markedIndividualDirectoryLocation=individuals 
 
 #file system folder in which adoption data will be stored (e.g. photos)
-adoptionLocation=adoptions
+#adoptionLocation=adoptions
 
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
+#This parameter does not affect Shepherd Project behavior except when exporting Excel files for use with the GBIF, iOBIS, etc.
 GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
 
 # set wikiLocation to point to your wiki to enable integration, e.g.
