more haplotype mapping

--- a/src/main/resources/bundles/en/mappedSearchResults.properties
+++ b/src/main/resources/bundles/en/mappedSearchResults.properties
@@ -71,3 +71,6 @@ exportedKMLTimeline = Exported Google Earth KML file with timeline
 exportedShapefile = Exported GIS shapefile
 clickHere = Click here
 exportOptions = Export Options
+
+#default Google Maps marker color
+defaultMarkerColor = C8C8C8
