--- a/src/main/resources/bundles/haplotypeColorCodes.properties
+++ b/src/main/resources/bundles/haplotypeColorCodes.properties
@@ -42,15 +42,15 @@ E3+C1 = CCFFCC
 E3-C = 
 EX4 = CCFFCC
 EX5 = CCFFCC
-F1+2T = 
-F1+C = 
+F1+2T = 99CCFF
+F1+C = 99CCFF
 F2+C = 0000FF
-F2+G = 
+F2+G = 99CCFF
 F2-C = 
-F2-C (X3) = 
+F2-C (X3) = 99CCFF
 F2-C(X3) = 
-F7 = 
-FX1 = 
+F7 = 99CCFF
+FX1 = 99CCFF
 Het (A+/A+1) = 
 Het (A+/AX7) = 
 Het (A+/new) = 
