--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,11 @@
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
         </dependency>
-
+  <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.0.0</version>
+    </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
