persisting many changes around Encounter Search, Google Charts, and the new Analysis display page

--- a/src/main/resources/bundles/en/calendar.properties
+++ b/src/main/resources/bundles/en/calendar.properties
@@ -22,3 +22,4 @@ table = Results Table
 matchingImages = Matching Images/Videos
 mappedResults = Mapped Results
 resultsCalendar = Results Calendar
+analysis = Analysis
