--- a/src/main/resources/bundles/en/mappedSearchResults.properties
+++ b/src/main/resources/bundles/en/mappedSearchResults.properties
@@ -61,6 +61,7 @@ vesselField = Vessel
 ###################################
 noGPS = No GPS data is available for mapping.
 mappedResults = Mapped Results
+analysis = Analysis
 mapNote = <em>Note:</em> If you zoom in too quickly, Google Maps may claim that it does not have the needed maps. Zoom back out, wait a few seconds to allow maps to load in the background, and then zoom in again.
 mappedMatchResults = (up to %numberResultsToMap% results shown)
 
@@ -74,3 +75,4 @@ exportOptions = Export Options
 
 #default Google Maps marker color
 defaultMarkerColor = C8C8C8
+
