--- a/src/main/resources/bundles/en/mappedSearchResults.properties
+++ b/src/main/resources/bundles/en/mappedSearchResults.properties
@@ -76,3 +76,20 @@ exportOptions = Export Options
 #default Google Maps marker color
 defaultMarkerColor = C8C8C8
 
+
+##################################
+#Display aspects
+##################################
+aspects = Map aspects
+
+displayAspectName0=Position only
+displayAspectName1=Haplotype
+displayAspectName2=Sex
+
+displayAspectFile0=mappedSearchResults.jsp
+displayAspectFile1=mappedSearchResultsHaplotype.jsp
+displayAspectFile2=mappedSearchResultsSex.jsp
+
+
+
+
