--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1148,6 +1148,10 @@
       <url-pattern>/encounters/thumbnailSearchResults.jsp</url-pattern>
       <url-pattern>/encounters/encounterSearch.jsp</url-pattern>
       <url-pattern>/encounters/searchResults.jsp</url-pattern>
+      <url-pattern>/encounters/searchResultsAnalysis.jsp</url-pattern>
+      <url-pattern>/encounters/mappedSearchResults.jsp</url-pattern>
+      <url-pattern>/encounters/mappedSearchResultsSex.jsp</url-pattern>
+      <url-pattern>/encounters/mappedSearchResultsHaplotype.jsp</url-pattern>
       <url-pattern>/googleSearch.jsp</url-pattern>
       <url-pattern>/googleSearchResults.jsp</url-pattern>
       <url-pattern>/encounters/imageViewer.jsp</url-pattern>
