More Encounter Search refinements

--- a/src/main/resources/bundles/en/calendar.properties
+++ b/src/main/resources/bundles/en/calendar.properties
@@ -23,3 +23,4 @@ matchingImages = Matching Images/Videos
 mappedResults = Mapped Results
 resultsCalendar = Results Calendar
 analysis = Analysis
+export = Export
