--- a/src/main/resources/bundles/en/exportSearchResults.properties
+++ b/src/main/resources/bundles/en/exportSearchResults.properties
@@ -17,7 +17,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-title = Encounter Search Results Analysis
+title = Mapped Search Results
 totalEncounter = Total encounters in the database
 rightClickLink = Right-click the link and save to your local hard drive.
 exportedExcel = Exported Excel spreadsheet (.xls) file
@@ -55,26 +55,28 @@ nameField = Submitter or photographer name or email address contains
 selectLength = Length
 numResights = Number of resights
 vesselField = Vessel
-
-
-###################################
-#Map-related text and configuration
-###################################
-noGPS = No GPS data is available for mapping.
-mappedResults = Mapped Results
 analysis = Analysis
-mapNote = <em>Note:</em> If you zoom in too quickly, Google Maps may claim that it does not have the needed maps. Zoom back out, wait a few seconds to allow maps to load in the background, and then zoom in again.
-mappedMatchResults = (up to %numberResultsToMap% results shown)
 export = Export
 
 #Defines the maximum number of results to map on this page. A value of -1 will allow an unlimited number of results. This value is only recommended for small data sets.
-numberResultsToMap = -1
+
 exportedKML = Exported Google Earth KML file
 exportedKMLTimeline = Exported Google Earth KML file with timeline
 exportedShapefile = Exported GIS shapefile
 clickHere = Click here
-exportOptions = Export Options
+exportOptions = Tabular Export Options
+gisExportOptions = GIS Export Options
 
-#default Google Maps marker color
-defaultMarkerColor = C8C8C8
+exportedExcel = Exported Excel spreadsheet (.xls) file
+exportedOBIS = Exported Excel spreadsheet (.xls) file in OBIS format
+exportedOBISLocales = Exported Excel spreadsheet (.xls) file in OBIS format with locale inclusion for unreported GPS
+exportedKML = Exported Google Earth KML file
+exportedEmail = Exported email data contributors file
+exportedGeneGIS = GeneGIS CSV file export
+mappedResults = Mapped Results
+
+
+
+
+
 
