--- a/src/main/resources/bundles/en/mappedSearchResults.properties
+++ b/src/main/resources/bundles/en/mappedSearchResults.properties
@@ -55,6 +55,8 @@ nameField = Submitter or photographer name or email address contains
 selectLength = Length
 numResights = Number of resights
 vesselField = Vessel
+analysis = Analysis
+export = Export
 
 ###################################
 #Map-related text and configuration
