--- a/src/main/resources/bundles/en/searchResults.properties
+++ b/src/main/resources/bundles/en/searchResults.properties
@@ -67,3 +67,4 @@ exportedGeneGIS = GeneGIS CSV file export
 clickHere = Click here
 exportOptions = Export Options
 analysis = Analysis
+export = Export
