Small amount of localization

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -213,3 +213,7 @@ releaseDate=Release Date
 releaseDateFormat=Use format dd/mm/yyyy
 setSexAnalysis = Add/update genetic sex determination
 geneticSex = Genetic sex
+type = Type
+value = Value
+units = Units
+samplingProtocol = Sampling Protocol
