first commit of location comparison feature

--- a/src/main/resources/bundles/en/header.properties
+++ b/src/main/resources/bundles/en/header.properties
@@ -34,6 +34,7 @@ viewUnidentifiable = View Unidentifiable Encounters
 search = Search
 encounterSearch = Encounter Search
 individualSearch = Individual Search
+locationSearch = Location Comparison
 googleSearch = Google Search
 administer = Administer
 accessPolicy = Access Policy
