--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,17 @@
       <version>2.0</version>
     </dependency>
     <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-mock</artifactId>
+    	<version>2.0.8</version>
+</dependency>
+<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-core</artifactId>
+	<version>3.1.1.RELEASE</version>
+</dependency>
+            
+    <dependency>
       <groupId>org.datanucleus</groupId>
       <artifactId>datanucleus-enhancer</artifactId>
       <version>${datanucleus.enhancer.version}</version>
