--- a/src/main/resources/bundles/en/locationSearchResults.properties
+++ b/src/main/resources/bundles/en/locationSearchResults.properties
@@ -56,6 +56,9 @@ selectLength = Length
 numResights = Number of resights
 vesselField = Vessel
 
+search1Results = Search 1 Results
+search2Results = Search 2 Results
+
 
 ###################################
 #Map-related text and configuration
