--- a/pom.xml
+++ b/pom.xml
@@ -109,10 +109,10 @@
       <artifactId>jdbc-stdext</artifactId>
       <version>2.0</version>
     </dependency>
-    <dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-mock</artifactId>
-    	<version>2.0.8</version>
+<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-test</artifactId>
+	<version>3.1.1.RELEASE</version>
 </dependency>
 <dependency>
 	<groupId>org.springframework</groupId>
