--- a/src/main/resources/bundles/en/locationSearchResults.properties
+++ b/src/main/resources/bundles/en/locationSearchResults.properties
@@ -63,7 +63,7 @@ search2Results = Search 2 Results
 ###################################
 #Map-related text and configuration
 ###################################
-noGPS = No GPS coordinates selected.
+noGPS = No spatial selection was made.
 mappedResults = Mapped Results
 analysis = Analysis
 mapNote = <em>Note:</em> If you zoom in too quickly, Google Maps may claim that it does not have the needed maps. Zoom back out, wait a few seconds to allow maps to load in the background, and then zoom in again.
