Renaming search comparison

--- a/src/main/resources/bundles/en/locationSearch.properties
+++ b/src/main/resources/bundles/en/locationSearch.properties
@@ -17,7 +17,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-title = Location Comparison Criteria
+title = Search Comparison Criteria
 instructions = Select from the criteria below to tailor your comparison among the sightings stored in the database.
 types2search = Encounter types to search
 approved = Approved
