continuing search comparison rename

--- a/src/main/resources/bundles/en/header.properties
+++ b/src/main/resources/bundles/en/header.properties
@@ -34,7 +34,7 @@ viewUnidentifiable = View Unidentifiable Encounters
 search = Search
 encounterSearch = Encounter Search
 individualSearch = Individual Search
-locationSearch = Location Comparison
+locationSearch = Search Comparison
 googleSearch = Google Search
 administer = Administer
 accessPolicy = Access Policy
