-adding GenePop export option link

--- a/src/main/resources/bundles/en/locationSearchResults.properties
+++ b/src/main/resources/bundles/en/locationSearchResults.properties
@@ -59,6 +59,8 @@ vesselField = Vessel
 search1Results = Search 1 Results
 search2Results = Search 2 Results
 
+exportOptions = Export Options
+
 
 ###################################
 #Map-related text and configuration
@@ -77,6 +79,8 @@ exportedKMLTimeline = Exported Google Earth KML file with timeline
 exportedShapefile = Exported GIS shapefile
 clickHere = Click here
 exportOptions = Export Options
+genepopExport = GenePop Export format
+link = Link
 
 #default Google Maps marker color
 defaultMarkerColor = C8C8C8
