-prepping for genepop haplotype export

--- a/src/main/resources/bundles/en/locationSearchResults.properties
+++ b/src/main/resources/bundles/en/locationSearchResults.properties
@@ -79,7 +79,8 @@ exportedKMLTimeline = Exported Google Earth KML file with timeline
 exportedShapefile = Exported GIS shapefile
 clickHere = Click here
 exportOptions = Export Options
-genepopExport = GenePop Export format
+genepopExport = GenePop Export format (genotypes)
+genepopExportHaplotypes = GenePop Export format (haplotypes)
 link = Link
 
 #default Google Maps marker color
