Pushing up interim changes, now using MySQL as db instead of Derby in an attempt to avoid persistence problems.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -190,6 +190,10 @@
 <servlet-name>EncounterSetPatterningPassport</servlet-name>
 <servlet-class>org.ecocean.servlet.EncounterSetPatterningPassport</servlet-class>
 </servlet>
+<servlet>
+<servlet-name>EncounterGetPatterningPassport</servlet-name>
+<servlet-class>org.ecocean.servlet.EncounterGetPatterningPassport</servlet-class>
+</servlet>
 
   <servlet>
     <servlet-name>ScanAppletSupport</servlet-name>
@@ -812,6 +816,10 @@
 	<servlet-mapping>
 		<servlet-name>EncounterSetPatterningPassport</servlet-name>
 		<url-pattern>/EncounterSetPatterningPassport</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>EncounterGetPatterningPassport</servlet-name>
+		<url-pattern>/EncounterGetPatterningPassport</url-pattern>
 	</servlet-mapping>
 
   <servlet-mapping>
