--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.ecocean</groupId>
   <artifactId>shepherd</artifactId>
-  <version>2.3.0-RELEASE</version>
+  <version>2.4.0-EXPERIMENTAL</version>
   <packaging>war</packaging>
 
   <properties>
