updating the UI for the mapped individual search results

--- a/src/main/resources/bundles/en/individualMappedSearchResults.properties
+++ b/src/main/resources/bundles/en/individualMappedSearchResults.properties
@@ -62,8 +62,10 @@ export = Export
 #Map-related text and configuration
 ###################################
 noGPS = No GPS data is available for mapping.
-mappedResults = Mapped Results for Matching Individuals
+mappedResults = Mapped Results
+mappedResultsFoIndividuals =  Mapped Results for Matching Individuals
 analysis = Analysis
+resultsNote = Individuals matching this search were sighted in these locations. 
 mapNote = <em>Note:</em> If you zoom in too quickly, Google Maps may claim that it does not have the needed maps. Zoom back out, wait a few seconds to allow maps to load in the background, and then zoom in again.
 mappedMatchResults = (up to %numberResultsToMap% results shown)
 
