--- a/src/main/resources/bundles/en/individuals.properties
+++ b/src/main/resources/bundles/en/individuals.properties
@@ -30,7 +30,7 @@ size = Size
 spots = Spot Data
 location = Location
 mapping = Mapping
-mappingnote = <em>Note</em>: If you zoom in too quickly, Google Maps may claim that it does not have the needed maps. Zoom back out, wait a few seconds to allow maps to load in the background, and then zoom in again.
+mappingnote = If you zoom in too quickly, Google Maps may claim that it does not have the needed maps. Zoom back out, wait a few seconds to allow maps to load in the background, and then zoom in again.<br /><br />If more than one point is mapped for the marked individual, the map also displays chevrons to guide you from the first sighting (shown as a green icon) to each subsequent sighting over time. The chevrons do NOT represent a path of travel, just a sequential link across time.
 setAlternateID = Set Alternate ID
 setNickname = Set Nickname
 unknown = Unknown
