fixing a property string statement

--- a/src/main/resources/bundles/en/individuals.properties
+++ b/src/main/resources/bundles/en/individuals.properties
@@ -65,7 +65,7 @@ matchingRecord = No matching record could be found for
 notAvailable = n/a
 taxonomy = Taxonomy
 tissueSamples = Tissue Samples
-noTissueSamples = No tissue samples have been added to this encounter.
+noTissueSamples = No tissue samples have been added for this individual.
 sampleID = Sample ID
 values = Attributes
 analyses = Analyses
