more occurrence fixes: sorting most to least in terms of other marked individual sighted with this one

--- a/src/main/resources/bundles/en/individuals.properties
+++ b/src/main/resources/bundles/en/individuals.properties
@@ -77,3 +77,6 @@ msMarkers = Microsatellite Markers
 geneticSex = Genetic sex
 dataTypes = Data Types
 correspondingEncounterNumber = Encounter
+social= Social Relationships
+numSightingsTogether = # Occurrences Together
+sightedWith = Occurring With
