allowing for no soocial values

--- a/src/main/resources/bundles/en/individuals.properties
+++ b/src/main/resources/bundles/en/individuals.properties
@@ -80,3 +80,4 @@ correspondingEncounterNumber = Encounter
 social= Social Relationships
 numSightingsTogether = # Occurrences Together
 sightedWith = Occurring With
+noSocial = No social relationships have been defined.
