-more behavioral integration code

--- a/src/main/resources/bundles/en/individuals.properties
+++ b/src/main/resources/bundles/en/individuals.properties
@@ -81,3 +81,5 @@ social= Social Relationships
 numSightingsTogether = # Occurrences Together
 sightedWith = Occurring With
 noSocial = No social relationships have been defined.
+behavior = Behavior
+groupBehavior = Group Behavior
