-working on genalex export...not working yet...

--- a/src/main/resources/bundles/en/searchComparisonResults.properties
+++ b/src/main/resources/bundles/en/searchComparisonResults.properties
@@ -79,8 +79,9 @@ exportedKMLTimeline = Exported Google Earth KML file with timeline
 exportedShapefile = Exported GIS shapefile
 clickHere = Click here
 exportOptions = Export Options
-genepopExport = GenePop Export format (genotypes)
-genepopExportHaplotypes = GenePop Export format (haplotypes)
+genepopExport = GenePop Export format (genotypes+haplotypes)
+genalexExportMS = Genalex Export format (microsatellite markers)
+genalexExportHaplotypes = GenAlEx Export format (haplotypes)
 link = Link
 
 #default Google Maps marker color
