--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -451,6 +451,12 @@
       <servlet-name>TissueSampleSetSexAnalysis</servlet-name>
       <servlet-class>org.ecocean.servlet.TissueSampleSetSexAnalysis</servlet-class>
   </servlet>
+  
+
+      <servlet>
+        <servlet-name>GenalexExportCodominantMSDataBySize</servlet-name>
+        <servlet-class>org.ecocean.servlet.export.GenalexExportCodominantMSDataBySize</servlet-class>
+  </servlet>
 
   <servlet>
     <servlet-name>EncounterSetGPS</servlet-name>
@@ -694,6 +700,13 @@
       <servlet-name>EncounterSetGenusSpecies</servlet-name>
       <url-pattern>/EncounterSetGenusSpecies</url-pattern>
   </servlet-mapping>
+  
+
+      <servlet-mapping>
+          <servlet-name>GenalexExportCodominantMSDataBySize</servlet-name>
+          <url-pattern>/GenalexExportCodominantMSDataBySize</url-pattern>
+  </servlet-mapping>
+    
   
     <servlet-mapping>
       <servlet-name>EncounterSetPatterningCode</servlet-name>
@@ -1144,6 +1157,10 @@
          <url-pattern>/EncounterSearchExportExcelFile</url-pattern>
          <url-pattern>/EncounterSearchExportShapefile</url-pattern>
          <url-pattern>/EncounterSearchExportEmailAddresses</url-pattern>
+         
+        
+             <url-pattern>/GenalexExportCodominantMSDataBySize</url-pattern>
+         
       <url-pattern>/CJS</url-pattern>
       <url-pattern>/software.jsp</url-pattern>
       <url-pattern>/interconnect/mac/Interconnect.jar</url-pattern>
@@ -1171,6 +1188,11 @@
       <url-pattern>/googleSearch.jsp</url-pattern>
       <url-pattern>/googleSearchResults.jsp</url-pattern>
       <url-pattern>/encounters/imageViewer.jsp</url-pattern>
+      
+      <url-pattern>/encounters/searchComparison.jsp</url-pattern>
+      <url-pattern>/encounters/searchComparisonResults.jsp</url-pattern>
+      
+      
       <url-pattern>/encounters/allEncountersUnapproved.jsp</url-pattern>
       <url-pattern>/appadmin/*</url-pattern>
       <url-pattern>/logs/*</url-pattern>
