first complete pass of genalex support

--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -66,7 +66,7 @@ msmarker = Has microsatellite marker loci
 noLoci = No loci have been defined.
 hasTissueSample = Has tissue sample
 hasHaplotype = Has a determined haplotype
-hasMSMarkers = Has a determined microsatellite markers
+hasMSMarkers = Has determined microsatellite markers
 fastOptions = Fast options
 slowOptions = Slow options
 allele = Allele
