--- a/src/main/resources/bundles/en/searchComparison.properties
+++ b/src/main/resources/bundles/en/searchComparison.properties
@@ -75,7 +75,7 @@ noLoci = No loci have been defined.
 measurements=Measurements
 hasTissueSample = Has tissue sample
 hasHaplotype = Has a determined haplotype
-hasMSMarkers = Has a determined microsatellite markers
+hasMSMarkers = Has determined microsatellite markers
 fastOptions = Fast options
 slowOptions = Slow options
 hasPhoto = Has at least one associated photo or video.
