--- a/src/main/resources/bundles/en/searchComparisonResults.properties
+++ b/src/main/resources/bundles/en/searchComparisonResults.properties
@@ -80,7 +80,7 @@ exportedShapefile = Exported GIS shapefile
 clickHere = Click here
 exportOptions = Export Options
 genepopExport = GenePop Export format (genotypes+haplotypes)
-genalexExportMS = Genalex Export format (microsatellite markers)
+genalexExportMS = GenAlEx Export format (microsatellite markers)
 genalexExportHaplotypes = GenAlEx Export format (haplotypes)
 link = Link
 
