fixies to bring mantamatchr up to 2.4.0-RELEASE state

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -48,7 +48,7 @@ htmlKeywords=giant manta,manta ray,Manta birostris,big fish,ECOCEAN USA, fish, c
 htmlTitle=ECOCEAN MantaMatcher
 
 #URL to the graphic to be displayed at the top of every page through header.jsp
-urlToMastheadGraphic=/${pom.artifactId}-${pom.version}/images/masthead.jpg
+urlToMastheadGraphic=/images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
 urlToFooterGraphic=/${pom.artifactId}-${pom.version}/images/lib_bottom.gif
