-upload and removal of processed image working

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -51,7 +51,7 @@ htmlTitle=ECOCEAN MantaMatcher
 urlToMastheadGraphic=/images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
-urlToFooterGraphic=/${pom.artifactId}-${pom.version}/images/lib_bottom.gif
+urlToFooterGraphic=http://www.mantamatcher.org/images/lib_bottom.gif
 footerGraphicAlt=Powered by ECOCEAN USA Shepherd Project
 
 
