--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
     	<artifactId>postgresql</artifactId>
     	<version>9.1-901.jdbc4</version>
 </dependency>
+<dependency>
+	<groupId>org.apache.commons</groupId>
+	<artifactId>commons-math</artifactId>
+	<version>2.2</version>
+</dependency>
+            
     <dependency>
       <groupId>net.sourceforge.jexcelapi</groupId>
       <artifactId>jxl</artifactId>
