adding first draft socprog export

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -303,6 +303,11 @@
       <servlet-class>org.ecocean.servlet.export.EncounterSearchExportGeneGISFormat</servlet-class>
   </servlet>
   
+      <servlet>
+        <servlet-name>SOCPROGExport</servlet-name>
+        <servlet-class>org.ecocean.servlet.export.SOCPROGExport</servlet-class>
+  </servlet>
+  
   
       <servlet>
         <servlet-name>GenePopExport</servlet-name>
@@ -1015,6 +1020,11 @@
     <servlet-name>EncounterAddSpotFile</servlet-name>
     <url-pattern>/EncounterAddSpotFile</url-pattern>
   </servlet-mapping>
+  
+    <servlet-mapping>
+      <servlet-name>SOCPROGExport</servlet-name>
+      <url-pattern>/SOCPROGExport</url-pattern>
+  </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>ImgServlet</servlet-name>
@@ -1160,6 +1170,7 @@
          
         
              <url-pattern>/GenalexExportCodominantMSDataBySize</url-pattern>
+             <url-pattern>/SOCPROGExport</url-pattern>
          
       <url-pattern>/CJS</url-pattern>
       <url-pattern>/software.jsp</url-pattern>
