interim occurrence display commit

--- a/src/main/resources/bundles/en/occurrence.properties
+++ b/src/main/resources/bundles/en/occurrence.properties
@@ -78,3 +78,6 @@ sightedWith = Occurring With
 noSocial = No social relationships have been defined.
 behavior = Behavior
 groupBehavior = Group Behavior
+encnum = Number
+sex = Sex
+alternateID = Alternate ID
