more occurrence support

--- a/src/main/resources/bundles/en/individuals.properties
+++ b/src/main/resources/bundles/en/individuals.properties
@@ -17,7 +17,8 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-markedIndividualTypeCaps = Tagged
+markedIndividualTypeCaps = Marked Individual
+description = A marked individual is a single animal distinctly identified at one or more points in time. <a href="http://www.ecoceanusa.org/shepherd/doku.php?id=manual:2.0.x:1_overview">Learn more.</a>
 nickname = Nickname
 nicknamer = Nicknamed by
 alternateID = Alternate ID
