--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -18,6 +18,7 @@
 #
 
 encounter = Encounter
+description = An encounter is a sighting of a single animal at a specific location and time. <a href="http://www.ecoceanusa.org/shepherd/doku.php?id=manual:2.0.x:1_overview">Learn more.</a>
 unidentifiable_title = Unidentifiable Encounter Number
 unapproved_title = UNAPPROVED Encounter Number
 title = Encounter Number
