--- a/src/main/resources/bundles/en/occurrence.properties
+++ b/src/main/resources/bundles/en/occurrence.properties
@@ -18,6 +18,7 @@
 #
 
 occurrence = Occurrence
+description = An occurrence is a sighting of multiple animals together over a short interval. <a href="http://www.ecoceanusa.org/shepherd/doku.php?id=manual:2.0.x:1_overview">Learn more.</a>
 numencounters = Encounter(s)
 number = Number
 date = Date
@@ -25,7 +26,7 @@ size = Size
 spots = Spot Data
 location = Location
 mapping = Mapping
-mappingnote = If you zoom in too quickly, Google Maps may claim that it does not have the needed maps. Zoom back out, wait a few seconds to allow maps to load in the background, and then zoom in again.<br /><br />If more than one point is mapped for the marked individual, the map also displays chevrons to guide you from the first sighting (shown as a green icon) to each subsequent sighting over time. The chevrons do NOT represent a path of travel, just a sequential link across time.
+mappingnote = If you zoom in too quickly, Google Maps may claim that it does not have the needed maps. Zoom back out, wait a few seconds to allow maps to load in the background, and then zoom in again.<br /><br />If more than one GPS point is available for the occurrence, the map also displays chevrons to guide you from the first sighting (shown as a green icon) to each subsequent sighting over time. The chevrons do NOT represent a path of travel, just a sequential link between sightings across time.
 setAlternateID = Set Alternate ID
 setNickname = Set Nickname
 unknown = Unknown
