more occurrence development

--- a/src/main/resources/bundles/en/occurrence.properties
+++ b/src/main/resources/bundles/en/occurrence.properties
@@ -82,3 +82,4 @@ groupBehavior = Group Behavior
 encnum = Number
 sex = Sex
 alternateID = Alternate ID
+numMarkedIndividuals = Number marked individuals participating
