more occurrence-related UI refinement

--- a/src/main/resources/bundles/en/individuals.properties
+++ b/src/main/resources/bundles/en/individuals.properties
@@ -84,3 +84,5 @@ sightedWith = Occurring With
 noSocial = No social relationships have been defined.
 behavior = Behavior
 groupBehavior = Group Behavior
+moreOccurrences = See occurrence
+andMore = ...and more...
