occurrence set/remove/create

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -87,11 +87,14 @@ unmatchedFirstEncounter = Unmatched first encounter
 visualInspection = Visual inspection
 patternMatch = Pattern match
 add2MarkedIndividual = Add to marked individual
+add2Occurrence = Add to occurrence
 individual = Individual
 suppressEmail = Suppress e-mail/RSS
 removeFromMarkedIndividual = Remove from marked individual
+removeFromOccurrence = Remove from occurrence
 remove = Remove
 createMarkedIndividual = Create marked individual
+createOccurrence = Create occurrence
 create = create
 resetGPS = Reset GPS
 leaveBlank = Leave blank if unknown.
@@ -218,6 +221,7 @@ type = Type
 value = Value
 units = Units
 samplingProtocol = Sampling Protocol
+occurrenceID = Occurrence ID
 
 #define the module JSP files to import
 #files must be placed in the encounters directory of the Shepherd Project webapp (i.e., in the same directory as encounter.jsp)
