enabling RESTful data exposure IMPORTANT FOR UPGRADE: migrating all DataNucleus config entries out of commonConfiguration.properties and into jdoconfig.xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -641,10 +641,10 @@
 
   <servlet>
     <servlet-name>DataNucleus</servlet-name>
-    <servlet-class>org.datanucleus.rest.RestServlet</servlet-class>
+    <servlet-class>org.datanucleus.api.rest.RestServlet</servlet-class>
     <init-param>
       <param-name>persistence-context</param-name>
-      <param-value>ShepherdProject</param-value>
+      <param-value>ShepherdPMF</param-value>
     </init-param>
   </servlet>
 
