rename TissueSample to biological sample in the interface

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -202,3 +202,7 @@ encounterState2=unidentifiable
 #locationID0 = location0
 #locationID1 = location 1
 
+#tissue sample types
+#tissueType0 = Tissue sample
+#tissueType1 = Fecal sample
+#tissueType2 = Mucus sample
