--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -165,16 +165,16 @@ lifeStage = Life stage
 measurements = Measurements
 #The notAvailable value must have a space dividing two words to be used by the EncounterSetGenusSpecies servlet
 notAvailable = Not available
-tissueSamples = Tissue Samples
-noTissueSamples = No tissue samples have been added to this encounter.
+tissueSamples = Biological Samples
+noTissueSamples = No biological samples have been added to this encounter.
 sampleID = Sample ID
-addTissueSample = Add a tissue sample
+addTissueSample = Add a biological sample
 removeTissueSample = Remove
-setTissueSample = Create/update tissue sample
-tissueType = Tissue type
+setTissueSample = Create/update biological sample
+tissueType = Sample type
 editTissueSample = Edit
 required = required
-tissueType = Tissue type
+tissueType = Sample type
 preservationMethod = Preservation method
 storageLabID = Storage lab ID
 alternateSampleID = Alternate sample ID
@@ -190,7 +190,7 @@ collectionID = Collection ID
 collectionCode = Collection code
 datasetID = Dataset ID
 datasetName = Dataset name
-addTissueSample = Add tissue sample
+addTissueSample = Add biological sample
 values = Attributes
 analyses = Analyses
 addHaplotype = Add haplotype
