--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -71,7 +71,7 @@ msmarker = Has microsatellite marker loci
 noHaplotypes = No haplotypes have been defined.
 noLoci = No loci have been defined.
 measurements=Measurements
-hasTissueSample = Has tissue sample
+hasTissueSample = Has biological sample
 hasPhoto = Has at least one associated photo or video.
 allele = Allele
 alleleRelaxValue = Relax allele length value by
