--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -64,7 +64,7 @@ noHaplotypes = No haplotypes have been defined.
 firstSightedInYear = First sighted in year
 msmarker = Has microsatellite marker loci
 noLoci = No loci have been defined.
-hasTissueSample = Has tissue sample
+hasTissueSample = Has biological sample
 hasHaplotype = Has a determined haplotype
 hasMSMarkers = Has determined microsatellite markers
 fastOptions = Fast options
