adding more default tissue types

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -203,6 +203,8 @@ encounterState2=unidentifiable
 #locationID1 = location 1
 
 #tissue sample types
-#tissueType0 = Tissue sample
-#tissueType1 = Fecal sample
-#tissueType2 = Mucus sample
+tissueType0 = Tissue sample
+tissueType1 = Fecal sample
+tissueType2 = Mucus sample
+tissueType3 = Blood sampe
+tissueType4 = Parasite sample
